# vision-mlops-pipeline

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  model-promotion.yml
config/: gates.yaml
deploy/k8s/: deployment.yaml  hpa.yaml  service.yaml
deploy/kserve/: inferenceservice.yaml
deploy/monitoring/: grafana-dashboard.json  prometheus-rules.yaml
deploy/terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_cli.py  test_data.py  test_detection.py  test_drift.py  test_evaluate.py  test_export.py  test_gates.py  test_model_training.py  test_registry.py  test_serving.py  test_yolo.py
vision_mlops/: __init__.py  cli.py  data.py  detection.py  drift.py  evaluate.py  export.py  gates.py  model.py  registry.py  train.py  yolo.py
vision_mlops/serving/: api.py
