[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-mlops-pipeline"
version = "0.1.0"
description = "End-to-end MLOps pipeline for computer-vision models: training, evaluation gates, drift monitoring, MLflow registry, ONNX export/quantization and a Prometheus-instrumented model server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vishal" }]
keywords = [
    "mlops",
    "pytorch",
    "yolo",
    "mlflow",
    "onnx",
    "model-serving",
    "drift-detection",
    "kserve",
    "computer-vision",
]

dependencies = [
    "torch>=2.6",
    "numpy>=1.26",
    "pillow>=10.0",
    "scipy>=1.12",
    "PyYAML>=6.0",
    "mlflow>=3.1",
    "onnx>=1.16",
    "onnxscript>=0.1",
    "onnxruntime>=1.18",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "prometheus-client>=0.20",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.27"]
yolo = ["ultralytics>=8.2"]

[project.scripts]
vmops = "vision_mlops.cli:main"

[tool.setuptools.packages.find]
include = ["vision_mlops*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]
